implemented MERN and display react calendar

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -2,18 +2,14 @@
 
 # dependencies
 /node_modules
-
-node_modules
 /.pnp
 .pnp.js
-
 
 # testing
 /coverage
 
 # production
-/build
-build
+# /build
 
 # misc
 .DS_Store
