--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
-  "name": "app",
+  "name": "buzzbuddy",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Mern Demo",
+  "engines": {
+    "npm": "6.10.3",
+    "node": "12.9.1"
+  },
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run start",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +27,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
     "path": "^0.12.7",
+    "react-monthly-events": "0.0.7",
     "sequelize": "^5.21.4"
   }
 }
