--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,33 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
+    "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "axios": "^0.19.2",
+    "babel-core": "^6.2.1",
+    "babel-loader": "^8.0.6",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.1.18",
+    "babel-register": "^6.26.0",
+    "body-parser": "^1.18.3",
+    "browser-detect": "^0.2.28",
+    "cors": "^2.8.4",
+    "css-loader": "^0.28.11",
+    "express": "^4.16.3",
+    "react": "^16.13.0",
+    "react-datepicker": "^2.13.0",
+    "react-dom": "^16.13.0",
+    "react-modal": "^3.11.2",
     "react-monthly-events": "0.0.7",
-    "react-scripts": "3.4.0"
+    "react-redux": "^7.2.0",
+    "react-router": "^2.0.1",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "3.4.0",
+    "redux": "4.0.0",
+    "redux-promise": "^0.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
