--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,9 @@
     "cors": "^2.8.4",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
+    "moment": "^2.24.0",
     "react": "^16.13.0",
+    "react-charts": "^2.0.0-beta.6",
     "react-datepicker": "^2.13.0",
     "react-dom": "^16.13.0",
     "react-modal": "^3.11.2",
