--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
-  "name": "app",
+  "name": "buzzbuddy",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Mern Demo",
+  "engines": {
+    "npm": "6.10.3",
+    "node": "12.9.1"
+  },
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build"
   },
   "keywords": [],
   "author": "",
@@ -14,9 +24,12 @@
     "crypto-js": "^3.1.9-1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "morgan": "^1.9.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
     "path": "^0.12.7",
-    "sequelize": "^5.21.4"
+    "react-monthly-events": "0.0.7",
+    "sequelize": "^5.21.4",
+    "serve-favicon": "^2.5.0"
   }
 }
