--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mobiscroll/react": "https://npm.mobiscroll.com/@mobiscroll/react-trial/-/react-trial-4.10.3.tgz",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
@@ -21,6 +22,7 @@
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
     "moment": "^2.24.0",
+    "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-charts": "^2.0.0-beta.6",
     "react-datepicker": "^2.13.0",
@@ -31,6 +33,7 @@
     "react-router": "^2.0.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "3.4.0",
+    "react-transition-group": "^1.2.1",
     "redux": "4.0.0",
     "redux-promise": "^0.5.3"
   },
@@ -38,7 +41,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "compile:sass": "node-sass src/components/Calendar/sass/main.scss src/components/Calendar/style.css -w"
   },
   "eslintConfig": {
     "extends": "react-app"
