--- a/.gitignore
+++ b/.gitignore
@@ -2,19 +2,18 @@
 
 # dependencies
 /node_modules
-
 node_modules
 /.pnp
 .pnp.js
-
 
 # testing
 /coverage
 
 # production
-/build
-build
+# /build
 
+package-lock.json
+/package-lock.json
 # misc
 .DS_Store
 .env.local
