--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "main": "server.js",
   "scripts": {
-    "start": "npm run start",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
@@ -29,14 +29,19 @@
     "nodemon": "^1.19.4"
   },
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "crypto-js": "^3.1.9-1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.3",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
     "path": "^0.12.7",
     "react-monthly-events": "0.0.7",
-    "sequelize": "^5.21.4"
+    "sequelize": "^5.21.4",
+    "if-env": "^1.0.4"
   }
 }
