--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.19.2",
     "body-parser": "^1.18.3",
     "browser-detect": "^0.2.28",
+    "concurrently": "^5.1.0",
     "cors": "^2.8.4",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
