--- a/package.json
+++ b/package.json
@@ -35,13 +35,14 @@
     "crypto-js": "^3.1.9-1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.3",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
+    "passport": "^0.4.1",
     "path": "^0.12.7",
     "react-monthly-events": "0.0.7",
-    "sequelize": "^5.21.4",
-    "if-env": "^1.0.4"
+    "sequelize": "^5.21.4"
   }
 }
