--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "crypto-js": "^3.1.9-1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "google-auth-library": "^5.10.1",
+    "googleapis": "^48.0.0",
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.3",
@@ -45,6 +48,7 @@
     "path": "^0.12.7",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-monthly-events": "0.0.7",
+    "readline": "^1.3.0",
     "sequelize": "^5.21.4"
   }
 }
