--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bootstrap": "^4.4.1",
     "cors": "^2.8.5",
     "crypto-js": "^3.1.9-1",
+    "dot-env": "0.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
